--- a/virtual_assistant_app/templates/base.html
+++ b/virtual_assistant_app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Assistant | {% block title %}{% endblock %}</title>
     {% load static %}
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'virtual_assistant_app/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
