--- a/virtual_assistant_app/templates/index.html
+++ b/virtual_assistant_app/templates/index.html
@@ -164,7 +164,7 @@
 
                 <div class="send-box">
 
-                  <form action="." method="POST" enctype="multipart/form-data" class="d-block">
+                  <form action="/dev" method="POST" enctype="multipart/form-data" class="d-block">
                     {% csrf_token %}
 
                     <div class="mb-2">
