--- a/virtual_assistant_app/templates/index.html
+++ b/virtual_assistant_app/templates/index.html
@@ -177,7 +177,7 @@
                     <div class="mb-2">
                       <input class="form-control w-100" type="hidden" step="0.01" min="0" max="2" name="temperature" value="{{ temperature }}" id="temperature">
                     </div>
-                    <div class="mb-2">
+                    <div class="">
                       <button type="submit" class="form-control btn-primary w-100"><i class="fa fa-paper-plane" aria-hidden="true"></i> Send</button>
                     </div>
                     
