mobile chatbox fix

--- a/virtual_assistant_app/templates/index.html
+++ b/virtual_assistant_app/templates/index.html
@@ -98,7 +98,7 @@
 
 
           <!-- chatbox -->
-          <div class="chatbox">
+          <div class="chatbox {{ showbox }}">
             <div class="modal-dialog-scrollable">
               <div class="modal-content">
                 <div class="msg-head">
