--- a/virtual_assistant_app/templates/index.html
+++ b/virtual_assistant_app/templates/index.html
@@ -129,7 +129,7 @@
                           </a>
                           <ul class="dropdown-menu">
                               <li>
-                                <a class="dropdown-item" href="{% url 'new_chat' %}">Clear Chat</a>
+                                <a class="dropdown-item" href="{% url 'new_chat' %}">New Chat</a>
                               </li>
                           </ul>
                         </li>
