--- a/virtual_assistant_app/static/virtual_assistant_app/style.css
+++ b/virtual_assistant_app/static/virtual_assistant_app/style.css
@@ -424,13 +424,13 @@ a.add img {
     clear: both;
     content: '';
     position: absolute;
-    top: -6px;
-    left: -7px;
+    bottom: -6px;
+    left: -3px;
     width: 0;
     height: 0;
     border-style: solid;
     border-width: 0 12px 15px 12px;
-    border-color: transparent transparent #f5f5f5 transparent;
+    border-color: transparent transparent #E6E7ED transparent;
     -webkit-transform: rotate(-37deg);
     -ms-transform: rotate(-37deg);
     transform: rotate(-37deg);
@@ -442,11 +442,9 @@ a.add img {
     line-height: 1.5;
     font-weight: 400;
     padding: 15px;
-    background: #f5f5f5;
+    background: #E6E7ED;
     display: inline-block;
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px;
     margin-bottom: 0;
 }
 
@@ -470,8 +468,8 @@ a.add img {
     clear: both;
     content: '';
     position: absolute;
-    bottom: 15px;
-    right: -7px;
+    bottom: -6px;
+    right: -3px;
     width: 0;
     height: 0;
     border-style: solid;
@@ -490,9 +488,7 @@ a.add img {
     padding: 15px;
     background: #4b7bec;
     display: inline-block;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-radius: 10px;
     margin-bottom: 0;
 }
 
@@ -702,7 +698,106 @@ button:focus {
     display: none;
 }
 
+/* Animations */
 
+@keyframes expand-bounce {
+    0% {
+      transform: scale(0);
+    }
+    50% {
+      transform: scale(1.25);
+    }
+    100% {
+      transform: scale(1);
+    }
+}
+
+.bounce {
+    transform-origin: 0% 100%;
+    transform: scale(0);
+    -webkit-animation: expand-bounce 0.5s ease-in forwards;
+    -moz-animation: expand-bounce 0.5s ease-in forwards;
+    -ms-animation: expand-bounce 0.5s ease-in forwards;
+    -o-animation: expand-bounce 0.5s ease-in forwards;
+    animation: expand-bounce 0.5s ease-in forwards;
+}
+
+/* iMessage typing indicator */
+
+@keyframes dot1L {
+    0% {
+      opacity: 0.4;
+    }
+    50% {
+      opacity: 1
+    }
+    100% {
+      opacity: 0.4;
+    }
+}
+
+.loadingDots {
+    margin: 20%;
+    position: relative;
+    background-color: #E6E7ED;
+    border-radius: 40px;
+    height: 50px;
+    width: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.loadingDots:after, .loadingDots:before {
+   content: '';
+   position: absolute;
+   bottom: -5px;
+   left: -2px;
+   height: 20px;
+   width: 20px;
+   border-radius: 50%;
+   background-color: #E6E7ED;
+}
+
+.loadingDots:before {
+    bottom: -15px;
+     height: 10px;
+     width: 10px;
+     left: -7px;
+}
+
+.dot1, .dot2, .dot3 {
+    margin:auto 2px;
+    background-color: #9E9EA1;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    opacity: 0.4;
+}
+
+.dot1 {
+    -webkit-animation: dot1L 1s ease-in-out 0.5s infinite forwards;
+    -moz-animation: dot1L 1s ease-in-out 0.5s infinite forwards;
+    -ms-animation: dot1L 1s ease-in-out 0.5s infinite forwards;
+    -o-animation: dot1L 1s ease-in-out 0.5s infinite forwards;
+    animation: dot1L 1s ease-in-out 0.5s infinite forwards;
+}
+
+.dot2 {
+    -webkit-animation: dot1L 1s ease-in-out 0.7s infinite forwards;
+    -moz-animation: dot1L 1s ease-in-out 0.7s infinite forwards;
+    -ms-animation: dot1L 1s ease-in-out 0.7s infinite forwards;
+    -o-animation: dot1L 1s ease-in-out 0.7s infinite forwards;
+    animation: dot1L 1s ease-in-out 0.7s infinite forwards;
+}
+
+.dot3 {
+    -webkit-animation: dot1L 1s ease-in-out 1s infinite forwards;
+    -moz-animation: dot1L 1s ease-in-out 1s infinite forwards;
+    -ms-animation: dot1L 1s ease-in-out 1s infinite forwards;
+    -o-animation: dot1L 1s ease-in-out 1s infinite forwards;
+    animation: dot1L 1s ease-in-out 1s infinite forwards;
+}
 
 @media (max-width: 767px) {
     .chat-icon {
