--- a/va/templates/base.html
+++ b/va/templates/base.html
@@ -79,6 +79,9 @@
         });
 
     </script>
+    
+    <!-- Lightbox -->
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 
 </body>
 </html>
