--- a/va/templates/index.html
+++ b/va/templates/index.html
@@ -188,7 +188,7 @@
 
                 <div class="send-box">
 
-                  <form action="/dev" method="POST" enctype="multipart/form-data" class="d-block">
+                  <form action="{% url 'send_prompt' %}" method="POST" enctype="multipart/form-data" class="d-block">
                     {% csrf_token %}
 
                     <div class="row">
