--- a/va/templates/index.html
+++ b/va/templates/index.html
@@ -151,12 +151,11 @@
                         <p class="ms-5">{{ message.content|linebreaksbr }}</p>
                         <span class="time">{{ message.time }}</span>
                       </li>
-                      {% else %}
-                      {% if message.name == 'generate_image' %}
+                      {% elif message.name == 'generate_image' %}
                       <li class="sender mt-2 {% if forloop.last %}d-none{% endif %}">
                         <p class="me-5">
                           <a href="{{ message.content }}" data-toggle="lightbox" data-gallery="gallery">
-                            <img class="img-fluid" src="{{ message.content }}" alt="Generated image">
+                            <img src="{{ message.content }}" alt="Generated image">
                           </a>
                         </p>
                         <span class="time">{{ message.time }}</span>
@@ -166,7 +165,6 @@
                         <p class="me-5">{{ message.content|linebreaksbr }}</p>
                         <span class="time">{{ message.time }}</span>
                       </li>
-                      {% endif %}
                       {% endif %}
                       {% endfor %}
                       <li class="reply mt-2 d-none" id="reply">
