--- a/va/templates/base.html
+++ b/va/templates/base.html
@@ -28,7 +28,12 @@
             $(".sender p").last().addClass('bounce');
             $(".sender").last().removeClass('d-none');
 
+            // Scroll functions
             $(".modal-body").scrollTop($(".msg-body")[0].scrollHeight);
+            // Delayed scroll for image generation
+            setTimeout(function() {
+                $(".modal-body").animate({ scrollTop: $(".msg-body")[0].scrollHeight });
+            }, 500);
 
         });
 
@@ -51,7 +56,7 @@
             setTimeout(function() {
                 $(".typing").removeClass('d-none');
                 $(".modal-body").animate({ scrollTop: $(".msg-body")[0].scrollHeight });
-            }, 1000);
+            }, 2000);
 
             setTimeout(function() {
                 $("#formFile").attr("disabled", true);
