--- a/va/templates/base.html
+++ b/va/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Assistant | {% block title %}{% endblock %}</title>
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" type="image/png" href="https://cdn10.bigcommerce.com/s-yhxhf/products/5881/images/10861/15MV081__73903.1429922981.600.600.png?c=2">
     <link href="{% static 'virtual_assistant_app/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
